Fix property spacing

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -36,6 +36,10 @@
   border-color: var(--fg-color-2);
 }
 
+.notion-list:has(+ :not(.notion-list)) {
+  padding-bottom: 1em;
+}
+
 .notion-list li {
   padding: 0;
 }
@@ -183,6 +187,10 @@
   }
 }
 
+.notion-aside-table-of-contents-header {
+  display: none;
+}
+
 .notion-h > span {
   display: inline-flex;
   flex-direction: row;
@@ -241,6 +249,10 @@
 .notion-collection-row-property .notion-property {
   display: flex;
   justify-content: center;
+}
+
+.notion-collection-row-property:has(.notion-property:empty) {
+  display: none;
 }
 
 .notion-collection-row-value {
